# GameOfLife-C

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  game-of-life  makefile
include/: Cell.h  FrameTimer.h  Int2.h  RNG.h  cell.h  float2.h  int2.h
src/: Cell.c  FrameTimer.c  Int2.c  cell.c  float2.c  int2.c  main.c  rng.c
